feat: redesign expense carts

--- a/src/app/main/mixins/expense-item-button.mixin.scss
+++ b/src/app/main/mixins/expense-item-button.mixin.scss
@@ -4,9 +4,11 @@
   justify-content: center;
   align-items: center;
   width: 140px;
-  height: 200px;
+  height: 220px;
   color: white;
-  background-color: #03A9F4;
-  border-radius: 10px;
+  background-color: #fff;
+  border-radius: 1px;
   margin: 10px 5px;
+  padding: 0;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
