--- a/src/app/main/components/expense/expense-list/expense-item/expense-item.component.scss
+++ b/src/app/main/components/expense/expense-list/expense-item/expense-item.component.scss
@@ -1,5 +1,6 @@
 @import "../../../../mixins/button-font.mixin";
 @import "../../../../mixins/expense-item-button.mixin";
+@import "../../../../mixins/form-title.mixin";
 
 .expense-item{
   @include button-font();
@@ -13,6 +14,20 @@
     fill: #2196F3;
     background-color: white;
     border-radius: 25%;
+  }
+
+  &__title{
+    @include form-title();
+  }
+
+  &__expense{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    width: calc(140px - 4px);
+    height: 50px;
+    background-color: #03A9F4;
   }
 
   &__expense, &__title{
