--- a/src/app/main/components/expense/modal-windows/add-expense-modal-window/add-expense-modal-window.component.html
+++ b/src/app/main/components/expense/modal-windows/add-expense-modal-window/add-expense-modal-window.component.html
@@ -2,7 +2,7 @@
 <form
   class="add-expense-form__form"
   [formGroup]="addExpenseForm"
-  (ngSubmit)="onClose()"
+  (ngSubmit)="addCost()"
 >
   <app-text-input
     class="authorization-form__input"
