--- a/src/app/pages/main/components/dropdown-menu/dropdown-menu.component.html
+++ b/src/app/pages/main/components/dropdown-menu/dropdown-menu.component.html
@@ -1,7 +1,7 @@
 <div class="dropdown">
   <span class="dropdown__name">{{menuTitle}}</span>
-  <button (click)="showMenu()" class="dropdown__open-button">{{presetService[this.menuName]}}</button>
-  <div #dropDownMenu class="dropdown__content">
+  <button (click)="onClick()" class="dropdown__open-button">{{presetService[this.menuName]}}</button>
+  <div class="dropdown__content" [class.show]="openedDropdown === menuName">
     <button
       class="dropdown__item"
       *ngFor="let menuItem of menuItems"
