--- a/src/app/pages/main/components/expense/modal-windows/cost-list-modal-window/cost-list-modal-window.component.html
+++ b/src/app/pages/main/components/expense/modal-windows/cost-list-modal-window/cost-list-modal-window.component.html
@@ -3,7 +3,7 @@
   <li class="cost-list__list-item" *ngFor="let cost of costList">
     <div class="cost-list__main-info-container">
       <span class="cost-list__cost-date">{{cost.costDate | date:'dd/MM/yy'}}</span>
-      <span class="cost-list__cost-value">{{cost.costValue}}</span>
+      <span class="cost-list__cost-value">{{cost.costValue}}{{this.presetService.currencySymbol}}</span>
     </div>
     <p class="cost-list-description">{{cost.costDescription}}</p>
   </li>
