--- a/src/app/pages/main/components/expense/modal-windows/cost-list-modal-window/cost-list-modal-window.component.scss
+++ b/src/app/pages/main/components/expense/modal-windows/cost-list-modal-window/cost-list-modal-window.component.scss
@@ -17,10 +17,11 @@
 
 .cost-list__main-info-container{
   display: flex;
+  justify-content: space-between;
 
   *{
     @include flex-center();
-    width: 50%;
+    width: auto;
     padding: 5px;
   }
 }
