--- a/src/app/pages/main/components/report-table/report-table.component.html
+++ b/src/app/pages/main/components/report-table/report-table.component.html
@@ -1,16 +1,14 @@
 <div class="report-table">
   <ul class="all-costs">
-    <li class="cost-category" *ngFor="let costCategory of costService.currentCostList">
-      <ul class="cost-category__cost-list">
-        <h3 class="cost-list__title">{{costCategory._id}}</h3>
-        <li class="cost-category__cost" *ngFor="let cost of costCategory.costList">
-          <div class="cost-list__main-info-container">
-            <span class="cost-list__cost-date">{{cost.costDate | date:'dd/MM/yy'}}</span>
-            <span class="cost-list__cost-value">{{cost.costValue}}</span>
-          </div>
-          <p class="cost-list-description">{{cost.costDescription}}</p>
-        </li>
-      </ul>
+    <li class="cost" *ngFor="let cost of costList">
+      <div class="cost__main-info-container">
+        <span class="cost__date">{{cost.costDate | date:'dd/MM/yy'}}</span>
+        <span class="cost__category">{{cost.costType}}</span>
+        <span class="cost__value">{{cost.costValue}}{{this.presetService.currencySymbol}}</span>
+      </div>
+      <p class="cost__description">
+        {{cost.costDescription}}
+      </p>
     </li>
   </ul>
 </div>
