--- a/src/app/pages/dialog/pages/dialog.component.html
+++ b/src/app/pages/dialog/pages/dialog.component.html
@@ -1,4 +1,4 @@
-<div class="overlay" (click)="onOverlayClicked($event)">
+<div class="overlay" [ngClass]="dialogOverlayColor" (click)="onOverlayClicked($event)">
   <div class="dialog" (click)="onDialogClicked($event)">
     <ng-template appInsertion> </ng-template>
   </div>
