--- a/src/app/pages/main/components/date-controller/date-switcher/date-switcher.component.scss
+++ b/src/app/pages/main/components/date-controller/date-switcher/date-switcher.component.scss
@@ -3,9 +3,10 @@
 
 .date-switcher {
   position: absolute;
+  top: 120px;
+  left: calc(50% - 130px);
   height: auto;
   width: 260px;
-  margin: 10px 0;
   background-color: #03A9F4;
   border-radius: 0.125rem;
   box-shadow: 0 21px 20px 0 rgba(0, 0, 0, 0.46), 0 15px 30px 0 rgba(0, 0, 0, 0.72);
