--- a/src/app/pages/main/components/report-table/report-table.component.scss
+++ b/src/app/pages/main/components/report-table/report-table.component.scss
@@ -5,6 +5,12 @@
 :host{
   height: inherit;
 }
+
+.all-costs{
+  display: flex;
+  flex-direction: column;
+  font-family: sans-serif;
+}
 .report-table{
   height: inherit;
   width: 100%;
@@ -29,12 +35,43 @@
   *{
     @include flex-center();
     width: 50%;
-    padding: 5px;
+    padding: 10px;
   }
 }
 
 .cost-list-description{
-  padding: 5px;
+  padding: 10px;
   font-weight: normal;
   border-bottom: 1px solid gray;
+}
+
+.cost__description{
+  padding: 10px;
+  font-weight: normal;
+  border-bottom: 1px solid #03A9F4;
+}
+
+.cost__category{
+  font-weight: bold;
+  color: #03A9F4;
+}
+
+.cost__main-info-container{
+  display: flex;
+}
+
+.cost__date, .cost__value, .cost__category{
+  @include flex-center();
+  width: 50%;
+  padding: 10px;
+}
+
+.cost__date{
+  font-weight: bold;
+  width: auto;
+}
+
+.cost__value{
+  width: 50%;
+  color: red;
 }
