--- a/src/app/pages/main/components/toolbar/toolbar.component.html
+++ b/src/app/pages/main/components/toolbar/toolbar.component.html
@@ -1,14 +1,24 @@
 <div class="toolbar">
   <button class="toolbar__menu-button" (click)="openToolbar()">☰</button>
-  <div #toolsContainer class="toolbar__tools-container hidden">
-    <ul class="tools-list">
-      <li class="tools-list__item">Settings</li>
-      <li class="tools-list__item">
-        <app-dropdown-menu menuName="currency"></app-dropdown-menu>
-      </li>
-      <li class="tools-list__item">
-        <app-dropdown-menu menuName="language"></app-dropdown-menu>
-      </li>
-    </ul>
-  </div>
+    <div #toolsContainer class="toolbar__tools-container hidden" (click)="onOverlayClicked($event)">
+      <div class="toolbar__tools-wrapper" (click)="onToolbarClicked($event)">
+        <ul class="tools-list">
+          <li class="tools-list__item">Settings</li>
+          <li class="tools-list__item">
+            <app-dropdown-menu
+              menuName="currency"
+              [openedDropdown]="openedMenu"
+              (dropdownChange)="onChangeDropdown($event)"
+            ></app-dropdown-menu>
+          </li>
+          <li class="tools-list__item">
+            <app-dropdown-menu
+              menuName="language"
+              [openedDropdown]="openedMenu"
+              (dropdownChange)="onChangeDropdown($event)"
+            ></app-dropdown-menu>
+          </li>
+        </ul>
+      </div>
+    </div>
 </div>
