--- a/src/app/pages/dialog/pages/dialog.component.html
+++ b/src/app/pages/dialog/pages/dialog.component.html
@@ -1,5 +1,12 @@
-<div class="overlay" [ngClass]="dialogOverlayColor" (click)="onOverlayClicked($event)">
-  <div class="dialog" (click)="onDialogClicked($event)">
-    <ng-template appInsertion> </ng-template>
+<div
+  class="overlay"
+  [ngClass]="dialogOverlayColor"
+  (click)="onOverlayClicked($event)"
+>
+  <div
+    class="dialog"
+    (click)="onDialogClicked($event)"
+  >
+    <ng-template appInsertion></ng-template>
   </div>
 </div>
