--- a/src/app/shared/components/text-input/text-input.component.html
+++ b/src/app/shared/components/text-input/text-input.component.html
@@ -4,4 +4,5 @@
   [type]="inputData.type"
   [name]="inputData.name"
   [value]="value ? value : ''"
-  [placeholder]="inputData.placeholder | translate" />
+  [placeholder]="inputData.placeholder | translate"
+/>
