--- a/src/app/styles/layout/flex-column-center-middle.mixin.scss
+++ b/src/app/styles/layout/flex-column-center-middle.mixin.scss
@@ -1,9 +1,6 @@
-.authorization-page__container {
+@mixin flex-column-center-middle() {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  height: 100vh;
-  width: 100vw;
 }
-
-
