--- a/src/app/mixins/form-submit-input.mixin.scss
+++ b/src/app/mixins/form-submit-input.mixin.scss
@@ -1,11 +1,14 @@
+@import "../styles/base/colors";
+
+
 @mixin form-submit-input() {
   box-sizing: border-box;
   height: 35px;
   width: 50%;
   padding: 5px;
   margin: 10px 0;
-  background: #2196F3;
-  border-bottom: 2px solid #2196F3;
+  background: $bar-color;
+  border-bottom: 2px solid $bar-color;
   border-top-style: none;
   border-right-style: none;
   border-left-style: none;
