--- a/src/app/pages/application/components/navbar/navbar.component.scss
+++ b/src/app/pages/application/components/navbar/navbar.component.scss
@@ -1,10 +1,12 @@
+@import "../../../../styles/base/colors";
+
 /* Add a black background color to the top navigation */
 .navbar {
   position: absolute;
   bottom: 0;
   width: 100vw;
   height: auto;
-  background-color: #2196F3;
+  background-color: $bar-color;
   font-family: sans-serif;
 }
 
@@ -21,7 +23,7 @@
 .link {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: $light-text-color;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -31,11 +33,11 @@
 /* Change the color of links on hover */
 .link-list__item:hover {
   background-color: #BBDEFB;
-  color: black;
+  color: $dark-text-color;
 }
 
 /* Add an active class to highlight the current page */
 .active {
   background-color: #1976D2;
-  color: white;
+  color: $light-text-color;
 }
