--- a/src/app/pages/application/components/toolbar/toolbar.component.scss
+++ b/src/app/pages/application/components/toolbar/toolbar.component.scss
@@ -1,9 +1,11 @@
+@import "../../../../styles/base/colors";
+
 .toolbar {
   display: flex;
   align-items: center;
   width: 100vw;
   height: 45px;
-  background-color: #2196F3;
+  background-color: $bar-color;
   font-family: sans-serif;
 }
 
@@ -13,8 +15,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #ffffff;
-  background: #2196F3;
+  color: $light-text-color;
+  background: $bar-color;
   border: none;
   font-size: 1.5rem;
   padding: 5px;
@@ -50,7 +52,7 @@
 .tools-list__item {
   display: block;
   margin: 0;
-  color: #f2f2f2;
+  color: $light-text-color;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
