--- a/src/app/pages/application/pages/main/components/date-controller/date-picker/date-picker.component.scss
+++ b/src/app/pages/application/pages/main/components/date-controller/date-picker/date-picker.component.scss
@@ -1,4 +1,5 @@
 @import "../../../mixins/date-controller-button.mixin";
+@import "../../../../../../../styles/base/colors";
 
 .date-picker {
   display: flex;
@@ -6,7 +7,7 @@
   width: 260px;
   height: 40px;
   border-radius: .125rem;
-  background-color: #03A9F4;
+  background-color: $main-color;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 
   .date-picker__day-switcher {
