--- a/src/app/pages/application/pages/main/components/date-controller/date-switcher/date-switcher.component.scss
+++ b/src/app/pages/application/pages/main/components/date-controller/date-switcher/date-switcher.component.scss
@@ -1,4 +1,5 @@
 @import "../../../mixins/date-controller-button.mixin";
+@import "../../../../../../../styles/base/colors";
 
 
 .date-switcher {
@@ -7,7 +8,7 @@
   left: calc(50% - 130px);
   height: auto;
   width: 260px;
-  background-color: #03A9F4;
+  background-color: $main-color;
   border-radius: 0.125rem;
   box-shadow: 0 21px 20px 0 rgba(0, 0, 0, 0.46), 0 15px 30px 0 rgba(0, 0, 0, 0.72);
   z-index: 1;
@@ -25,7 +26,7 @@
     align-items: center;
     width: 50%;
     height: 30px;
-    color: white;
+    color: $light-text-color;
     font-size: 20px;
   }
 
