--- a/src/app/pages/application/pages/main/components/expense/modal-windows/add-expense-modal-window/add-expense-modal-window.component.scss
+++ b/src/app/pages/application/pages/main/components/expense/modal-windows/add-expense-modal-window/add-expense-modal-window.component.scss
@@ -1,15 +1,14 @@
 @import "../../../../mixins/date-controller-button.mixin";
 @import "../../../../../../../../mixins/form-title.mixin";
 @import "../../../../../../../../mixins/form-submit-input.mixin";
+@import "../../../../../../../../styles/layout/flex.mixin";
 
 @mixin element-margin($margin) {
   margin: $margin;
 }
 
 :host {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include flex($flex-direction: column, $align-items: center);
 }
 
 .add-expense-form__title {
@@ -23,9 +22,7 @@
 }
 
 .add-expense-form__form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include flex($flex-direction: column, $align-items: center);
   width: 100%;
 }
 
