--- a/src/app/pages/dialog/pages/dialog.component.scss
+++ b/src/app/pages/dialog/pages/dialog.component.scss
@@ -1,4 +1,5 @@
 @import "../../application/pages/main/mixins/button-font.mixin";
+@import "../../../styles/base/colors";
 
 .overlay {
   display: flex;
@@ -12,19 +13,19 @@
   justify-content: center;
 }
 
-.black{
+.black {
   background: rgba(0, 0, 0, 0.7);
 }
 
-.clear{
+.clear {
   background: none;
 }
 
 .dialog {
   @include button-font();
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-  background-color: white;
-  color: black;
+  background-color: $main-background-color;
+  color: $dark-text-color;
   min-width: 250px;
   width: fit-content;
   height: auto;
