--- a/src/app/shared/components/image-input/image-input.component.scss
+++ b/src/app/shared/components/image-input/image-input.component.scss
@@ -1,21 +1,22 @@
 @import "../../../mixins/form-title.mixin";
+@import "../../../styles/base/colors";
 
 
-.image-input{
+.image-input {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  &__preview{
+  &__preview {
     width: 130px;
     height: 130px;
     object-fit: cover;
-    border: 5px solid #2196F3;
+    border: 5px solid $bar-color;
     border-radius: 25%;
   }
 
-  &__input{
+  &__input {
     width: 0.1px;
     height: 0.1px;
     opacity: 0;
@@ -28,16 +29,16 @@
     @include form-title($color: white);
     width: 250px;
     margin: 10px;
-    background-color: #2196F3;
+    background-color: $bar-color;
     cursor: pointer;
   }
 
   &__input:focus + &__input-label,
   &__input + &__input-label:hover {
-    background-color: #03A9F4;
+    background-color: $main-color;
   }
 
-  &__input:focus + &__input-label{
+  &__input:focus + &__input-label {
     outline: auto 10px -webkit-focus-ring-color
   }
 }
