--- a/src/app/pages/application/components/total-cost/total-cost.component.html
+++ b/src/app/pages/application/components/total-cost/total-cost.component.html
@@ -1,3 +1,5 @@
-<span class="total-cost">
-  {{'toolbar.total' | translate}}: {{costService.getTotalCost() | currency:' '}}{{presetService.currencySymbol}}
+<span
+  class="total-cost"
+  [innerHTML]="('toolbar.total' | translate) + ':' + (costService.getTotalCost() | currency:' ') + presetService.currencySymbol"
+>
 </span>
