--- a/src/app/pages/application/pages/main/components/expense/expense-list/expense-item/expense-item.component.html
+++ b/src/app/pages/application/pages/main/components/expense/expense-list/expense-item/expense-item.component.html
@@ -13,8 +13,10 @@
       [maskColor]="expenseItemConfig.color"
     ></app-image-with-mask>
 
-    <span class="expense-item__expense">
-      {{currentCostValue| currency:' '}} {{presetService.currencySymbol}}
+    <span
+      class="expense-item__expense"
+      [innerHTML]="(currentCostValue| currency:' ') + ' ' + presetService.currencySymbol"
+    >
     </span>
   </ng-container>
 </button>
