--- a/src/app/pages/application/pages/main/components/expense/modal-windows/add-cost-category-modal-window/add-cost-category-modal-window.component.html
+++ b/src/app/pages/application/pages/main/components/expense/modal-windows/add-cost-category-modal-window/add-cost-category-modal-window.component.html
@@ -26,7 +26,7 @@
 
     <div class="add-cost-category__colors-wrapper">
       <app-radio-input
-        *ngFor="let input of colors"
+        *ngFor="let input of radioInputs"
         (valueSelected)="getSelectedColor($event)"
         [isSelected]="selectedColor === input.value"
         [control]="getControl(input.name)"
