--- a/src/app/pages/application/pages/main/components/expense/expense-list/add-expense-item/add-expense-item.component.html
+++ b/src/app/pages/application/pages/main/components/expense/expense-list/add-expense-item/add-expense-item.component.html
@@ -1,7 +1,7 @@
 <button
   class="add-expense-item"
   (click)="openModal()"
+  [innerHTML]="buttonsSign.Plus"
 >
-  {{ButtonsSign.Plus}}
 </button>
 
