--- a/src/app/pages/application/pages/main/components/expense/modal-windows/cost-list-modal-window/cost-list-modal-window.component.html
+++ b/src/app/pages/application/pages/main/components/expense/modal-windows/cost-list-modal-window/cost-list-modal-window.component.html
@@ -14,7 +14,11 @@
       <div class="cost-list__main-info-container">
         <span class="cost-list__cost-date">{{cost.costDate | date: DateFormat.UIS}}</span>
 
-        <span class="cost-list__cost-value">{{cost.costValue | currency:' '}}{{this.presetService.currencySymbol}}</span>
+        <span
+          class="cost-list__cost-value"
+          [innerHTML]="(cost.costValue | currency:' ') + ' ' + this.presetService.currencySymbol"
+        >
+        </span>
       </div>
 
       <p class="cost-list-description">{{cost.costDescription}}</p>
