--- a/src/app/pages/application/pages/main/components/report-table/report-table.component.html
+++ b/src/app/pages/application/pages/main/components/report-table/report-table.component.html
@@ -15,8 +15,10 @@
           {{!cost.costLocalizationKey ? makeFirstLetterCapital(cost.costType) : cost.costLocalizationKey | translate}}
         </span>
 
-        <span class="cost__value">
-          {{cost.costValue | currency:' '}}{{this.presetService.currencySymbol}}
+        <span
+          class="cost__value"
+          [innerHTML]="(cost.costValue | currency:' ') + ' ' + this.presetService.currencySymbol"
+        >
         </span>
       </div>
 
