--- a/src/app/pages/authorization/components/authorization-form/authorization-form.component.html
+++ b/src/app/pages/authorization/components/authorization-form/authorization-form.component.html
@@ -16,7 +16,7 @@
 
     <input
       class="authorization-form__submit"
-      [type]="InputTypes.Submit"
+      [type]="inputTypes.Submit"
       [attr.value]="'authorization.send' | translate"
       [disabled]="authorizationForm.invalid"
     />
