--- a/src/app/pages/application/components/toolbar/toolbar.component.html
+++ b/src/app/pages/application/components/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <div class="toolbar">
   <button
     class="toolbar__menu-button"
-    (click)="openToolbar()"
+    (click)="toggleToolbar()"
     [innerHTML]="buttonsSign.BurgerMenu"
   >
   </button>
