--- a/src/app/pages/authorization/components/button/button.component.scss
+++ b/src/app/pages/authorization/components/button/button.component.scss
@@ -2,6 +2,8 @@
 @import "../../../../styles/layout/flex.mixin";
 @import "../../../../styles/components/solid-border.mixin";
 
+$transition: all 0.4s ease 0s;
+
 .button {
   @include flex($align-items: center);
   @include solid-border($size: 2px, $color: $white);
@@ -11,12 +13,12 @@
   background: $bar-color;
   padding: 5px;
   margin: 0 10px;
-  transition: all 0.4s ease 0s;
+  transition: $transition;
 }
 
 .button:hover {
   border-radius: 12px;
-  transition: all 0.4s ease 0s;
+  transition: $transition;
 }
 
 .icon-size {
