--- a/src/app/styles/base/sizes.scss
+++ b/src/app/styles/base/sizes.scss
@@ -3,6 +3,5 @@ $auth-toolbar: 60px;
 $navbar-height: 45px;
 $date-picker-container-height: 60px;
 $date-picker-height: 40px;
-$tools-container-height: calc(100vh - 45px - 45px);
+$tools-container-height: calc(100vh - #{$toolbar-height} - #{$navbar-height});
 $date-modal-width: 260px;
-
